[package]
name = "kvs"
version = "0.1.0"
authors = ["tanwei <code@tanweime.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "kvs"
test = false

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = "3.0.0-beta.4"
