[package]
name = "kvs"
version = "0.1.0"
authors = ["tanwei <code@tanweime.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/client.rs"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = "3.0.0-beta.4"
failure = "0.1.8"
failure_derive = "0.1.8"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
log = "0.4.14"
rand = "0.8.4"
env_logger = "0.9.0"
log4rs = "1.0.0"
