[package]
name = "kvs"
version = "0.1.0"
authors = ["tanwei <code@tanweime.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "kvs-server"
path = "src/bin/kv-server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/kv-client.rs"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[dependencies]
clap = "3.0.0-beta.4"
failure = "0.1.8"
failure_derive = "0.1.8"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
log = "0.4.14"
rand = "0.8.4"
env_logger = "0.9.0"
log4rs = "1.0.0"
sled = "0.34.6"
num_cpus = "1.13.0"
rayon = "1.5.1"

# [[bench]]
# name = "read_write_bench"
# harness = false

[[bench]]
name = "thread_pool_bench"
harness = false
